adding new tables and get data and search functionalites
